# ZegoAudioLiveRtp

./: .gitattributes  .gitignore  README.md
android/: build.gradle  demo_version.txt  gradle.properties  local.properties  sdk_pkg_info.json
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: stream_info.xml  (+3 more)
android/audiolive/: demo_version.txt  sdk_pkg_info.json
android/audiolive/AudioRoomDemo_180713_181956_release_new-0-gb73f939_bn95_udp/: demo_version.txt
android/audiolive/AudioRoomDemo_180713_181956_release_new-0-gb73f939_bn95_udp/app/: proguard-rules.pro
android/gradle/wrapper/: gradle-wrapper.properties
ios/: AudioLive copy-Info.plist  sdk_pkg_info.json
ios/AudioLive/: AppDelegate.h  AppDelegate.m  Info.plist  ZegoAVKitManager.h  ZegoAVKitManager.m  ZegoAdvancedTableViewController.m  ZegoAudioLiveViewController.m  ZegoOptionViewController.h  ZegoSetTableViewController.h  ZegoSetTableViewController.m  ZegoSettings.h  ZegoSettings.m  ZegoShareLogViewController.h  ZegoShareLogViewController.m  main.m
ios/AudioLive.xcodeproj/: project.pbxproj
ios/AudioLive.xcodeproj/xcshareddata/xcschemes/: AudioLive.xcscheme  AudioLiveiOS7.xcscheme
ios/AudioLive.xcodeproj/xcuserdata/xia.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/AudioLive/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/AudioLive/Assets.xcassets/disable_mic.imageset/: Contents.json
ios/AudioLive/Assets.xcassets/disable_speaker.imageset/: Contents.json
ios/AudioLive/Assets.xcassets/enable_mic.imageset/: Contents.json
ios/AudioLive/Assets.xcassets/is_speaking.imageset/: Contents.json
ios/AudioLive/Assets.xcassets/no_speaking.imageset/: Contents.json
ios/AudioLive/Base.lproj/: Localizable.strings  Main.storyboard
ios/AudioLive/en.lproj/: Localizable.strings  Main.strings
ios/AudioLive/zh-Hans.lproj/: Localizable.strings  Main.strings
ios/audiolive/AudioLive_180713_181956_release_new-0-gb73f939_bn95/AudioLive/: AppDelegate.m  ZegoAVKitManager.h  ZegoAVKitManager.m  ZegoAudioLiveViewController.h  ZegoAudioLiveViewController.m  ZegoCollectionViewLayout.h  ZegoCollectionViewLayout.m  ZegoOptionViewController.m  ZegoSetTableViewController.m  ZegoVideoRootViewController.h  ZegoVideoRootViewController.m
ios/audiolive/AudioLive_180713_181956_release_new-0-gb73f939_bn95/AudioLive.xcodeproj/: project.pbxproj
ios/audiolive/AudioLive_180713_181956_release_new-0-gb73f939_bn95/AudioLive/Base.lproj/: Main.storyboard
ios/audiolive/AudioLive_180713_181956_release_new-0-gb73f939_bn95/AudioLive/en.lproj/: Localizable.strings
ios/audiolive/AudioLive_180713_181956_release_new-0-gb73f939_bn95/AudioLive/zh-Hans.lproj/: Localizable.strings  Main.strings
ios/audiolive/__MACOSX/AudioLive_180713_181956_release_new-0-gb73f939_bn95/: ._AudioLive.xcodeproj
ios/audiolive/__MACOSX/AudioLive_180713_181956_release_new-0-gb73f939_bn95/AudioLive/: ._ZegoAVKitManager.m  ._ZegoSetTableViewController.m  ._ZegoSettings.m
ios/audiolive/__MACOSX/AudioLive_180713_181956_release_new-0-gb73f939_bn95/AudioLive.xcodeproj/: ._project.xcworkspace
ios/libs/ZegoAudioRoom-all/iphoneos/ZegoAudioRoom.framework/: Info.plist  ZegoAudioRoom
ios/libs/ZegoAudioRoom-all/iphoneos_simulator/ZegoAudioRoom.framework/: ZegoAudioRoom
windows/: sdk_pkg_info.json
windows/ZegoAudioLive/: CMakeLists.txt  ZegoAudioDemo.h  ZegoAudioLiveDialog.ui  ZegoMainDialog.qrc  ZegoSettingsDialog.ui  main.cpp
windows/ZegoAudioLive/Base/: AppIDHelper.h.in  IncludeZegoAudioRoomApi.h  ZegoAudioLiveVersion.h  ZegoBase.cpp  ZegoBase.h
windows/ZegoAudioLive/Config/: ZegoUserConfig.cpp  ZegoUserConfig.h  ZegoUserConfig.ini
windows/ZegoAudioLive/Device/: ZegoDeviceManager.cpp  ZegoDeviceManager.h
windows/ZegoAudioLive/Dialog/: ZegoAudioLiveDialog.cpp  ZegoAudioLiveDialog.h  ZegoMainDialog.cpp  ZegoMainDialog.h  ZegoSettingsDialog.cpp  ZegoSettingsDialog.h
windows/ZegoAudioLive/Model/: ZegoRoomModel.h  ZegoSettingsModel.cpp  ZegoStreamModel.h
windows/ZegoAudioLive/Resources/: res.rc
windows/ZegoAudioLive/Signal/: ZegoSDKSignal.cpp  ZegoSDKSignal.h
windows/ZegoAudioLive/UI/: ZegoAudioView.cpp  ZegoAudioView.h  ZegoLabel.cpp  ZegoLabel.h  ZegoLogLabel.cpp  ZegoLogLabel.h  ZegoMircophone.cpp  ZegoTextButton.h
windows/audiolive/AudioRoomDemo_180713_182115_release_new-0-gb73f939_bn36_udp/: CMakeLists.txt  sdk_pkg_info.json
windows/audiolive/AudioRoomDemo_180713_182115_release_new-0-gb73f939_bn36_udp/ZegoAudioLive/: CMakeLists.txt  ZegoAudioDemo.cpp  ZegoMainDialog.ui  style.qrc
windows/audiolive/AudioRoomDemo_180713_182115_release_new-0-gb73f939_bn36_udp/ZegoAudioLive/Base/: ZegoAudioLiveDefines.h  ZegoBase.cpp  ZegoDialog.cpp  ZegoDialog.h
windows/audiolive/AudioRoomDemo_180713_182115_release_new-0-gb73f939_bn36_udp/ZegoAudioLive/Config/: ZegoUserConfig.cpp
windows/audiolive/AudioRoomDemo_180713_182115_release_new-0-gb73f939_bn36_udp/ZegoAudioLive/Delegate/: NoFocusFrameDelegate.cpp
windows/audiolive/AudioRoomDemo_180713_182115_release_new-0-gb73f939_bn36_udp/ZegoAudioLive/Device/: ZegoDeviceManager.cpp
windows/build-win/cmake_temp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ZegoAudioLive.sln  cmake_install.cmake
windows/build-win/cmake_temp/ZegoAudioLive/: ZegoAudioLive.vcxproj  ZegoAudioLive.vcxproj.filters  ZegoMainDialog.qrc.depends  cmake_install.cmake  qrc_style.cpp  style.qrc.depends  ui_ZegoAudioLiveDialog.h  ui_ZegoMainDialog.h  ui_ZegoSettingsDialog.h
windows/include/zegoaudioroom/: AVDefines.h  AudioRoom-IM.h  AudioRoom-Player.h  AudioRoom-Publisher.h  AudioRoom.h  AudioRoomCallback-IM.h  AudioRoomCallback-Player.h  AudioRoomCallback-Publisher.h  AudioRoomCallback.h  AudioRoomDefines.h  zego-api-audio-aux.h  zego-api-defines.h  zego-api-error.h  zego-api-media-side-info.h  zego-api-mix-stream-defines.h  zego-api-mix-stream.h
(+148 files in other folders)
